Show correct currency in report

In multi-currency transactions the transaction commodity was used as
currency instead of the categories currency. The value shown is correct.

This change fixes the problem by overriding the currency in this case
with the one of the category.

BUG: 423870